Modified Coreset Algo included

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -47,23 +47,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query train data\n",
+    "querytrainloader = QueryVictim(config[\"victim\"], outputs, trainloader, 500, query_type=config[\"query_type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "lMNfr2wZwGMF"
    },
    "outputs": [],
    "source": [
     "# get dataset in dataloader\n",
-    "trainloader, testloader = getDataset(config[\"victim\"][\"data\"], config['batch_size'])\n",
+    "trainloader, testloader, outputs = getDataset(config[\"victim\"][\"data\"], config['batch_size'])\n",
     "\n",
     "# query & save test data\n",
-    "querytestloader = QueryVictim(config[\"victim\"], testloader, len(testloader.dataset))\n",
+    "querytestloader = QueryVictim(config[\"victim\"], outputs, testloader, len(testloader.dataset))\n",
     "#torch.save(querytestloader, f'attacker/queried_data/{config[\"victim\"][\"data\"]}_queriedtestdataloader.pt')\n",
     "\n",
     "# query train data\n",
-    "querytrainloader = QueryVictim(config[\"victim\"], trainloader, config[\"query_size\"], query_type=config[\"query_type\"])\n",
+    "querytrainloader = QueryVictim(config[\"victim\"], outputs, trainloader, config[\"query_size\"], query_type=config[\"query_type\"])\n",
     "\n",
     "# initialize attacker model\n",
-    "attacker = ResNet34(3, ResBlock, outputs=10)\n",
+    "attacker = ResNet34(3, ResBlock, outputs=outputs)\n",
     "attacker_loss = torch.nn.CrossEntropyLoss()\n",
     "\n",
     "# train attacker model\n",
@@ -102,10 +112,10 @@
     "for victim in parameters[\"victim\"]:\n",
     "    print('---------------------------------------------------------------------------')\n",
     "    # get dataset in dataloader\n",
-    "    trainloader, testloader = getDataset(victim[\"data\"], config['batch_size'])\n",
+    "    trainloader, testloader, outputs = getDataset(victim[\"data\"], config['batch_size'])\n",
     "    \n",
     "    # query test data\n",
-    "    querytestloader = QueryVictim(victim, testloader, len(testloader.dataset))\n",
+    "    querytestloader = QueryVictim(victim, outputs, testloader, len(testloader.dataset))\n",
     "    \n",
     "    # Iterate Through Query Type\n",
     "    for querytype in parameters[\"query_type\"]:\n",
@@ -116,7 +126,7 @@
     "            print(f'---------------Query Type: {querytype} Query Size: {size}-------------------')\n",
     "            \n",
     "            # query train data\n",
-    "            querytrainloader = QueryVictim(victim, trainloader, size, query_type=querytype)\n",
+    "            querytrainloader = QueryVictim(victim, outputs, trainloader, size, query_type=querytype)\n",
     "            \n",
     "            # initialize attacker model\n",
     "            attacker = ResNet34(3, ResBlock, outputs=10)\n",
