Coreset resnet18 + new attacker models added

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/Aishu/dl-model-extraction'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir(\"../\")\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "idQmKzBgZqug"
    },
@@ -47,41 +58,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# query train data\n",
-    "querytrainloader = QueryVictim(config[\"victim\"], outputs, trainloader, 500, query_type=config[\"query_type\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "lMNfr2wZwGMF"
    },
    "outputs": [],
    "source": [
     "# get dataset in dataloader\n",
-    "trainloader, testloader, outputs = getDataset(config[\"victim\"][\"data\"], config['batch_size'])\n",
+    "trainloader, testloader, outputs = getDataset(config[\"victim\"][\"data\"])\n",
     "\n",
     "# query & save test data\n",
     "querytestloader = QueryVictim(config[\"victim\"], outputs, testloader, len(testloader.dataset))\n",
-    "#torch.save(querytestloader, f'attacker/queried_data/{config[\"victim\"][\"data\"]}_queriedtestdataloader.pt')\n",
+    "\n",
     "\n",
     "# query train data\n",
     "querytrainloader = QueryVictim(config[\"victim\"], outputs, trainloader, config[\"query_size\"], query_type=config[\"query_type\"])\n",
     "\n",
     "# initialize attacker model\n",
-    "attacker = ResNet34(3, ResBlock, outputs=outputs)\n",
-    "attacker_loss = torch.nn.CrossEntropyLoss()\n",
+    "attacker = getModel(config[\"attacker\"], outputs)\n",
     "\n",
     "# train attacker model\n",
-    "attacker_result = Training(attacker, querytrainloader, querytestloader, (-1, 3, 32, 32), config[\"epochs\"], optimizer=torch.optim.Adam(\n",
-    "    attacker.parameters(), lr=config[\"learning_rate\"]), loss=attacker_loss)\n",
+    "attacker_result = Training(attacker, querytrainloader, querytestloader, (-1, 3, 32, 32), config[\"epochs\"], \n",
+    "                           optimizer=torch.optim.Adam(attacker.parameters(), lr=config[\"learning_rate\"]),\n",
+    "                           loss=torch.nn.CrossEntropyLoss())\n",
     "\n",
     "# save & visualize model inference\n",
-    "percent = SaveVisualize(attacker, attacker_result,  f'Trial-A_R34_{config[\"victim\"][\"model_name\"]}_{config[\"victim\"][\"data\"]}{config[\"query_type\"]}_{config[\"query_size\"]}')\n",
+    "title = f'Trial-A_{config[\"attacker\"]}_{config[\"victim\"][\"model_name\"]}_{config[\"victim\"][\"data\"]}{config[\"query_type\"]}_{config[\"query_size\"]}'\n",
+    "percent = SaveVisualize(attacker, attacker_result,title )\n",
     "results_dict={\"Victim\":config[\"victim\"][\"model_name\"],\n",
     "                \"Dataset\":config[\"victim\"][\"data\"],\n",
     "                \"QueryType\": config[\"query_type\"],\n",
@@ -107,49 +109,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Iterate through Model & Dataset\n",
     "Results = []\n",
+    "# Iterate through Victim Model & Dataset\n",
     "for victim in parameters[\"victim\"]:\n",
     "    print('---------------------------------------------------------------------------')\n",
     "    # get dataset in dataloader\n",
-    "    trainloader, testloader, outputs = getDataset(victim[\"data\"], config['batch_size'])\n",
-    "    \n",
+    "    trainloader, testloader, outputs = getDataset(victim[\"data\"])\n",
+    "\n",
     "    # query test data\n",
     "    querytestloader = QueryVictim(victim, outputs, testloader, len(testloader.dataset))\n",
     "    \n",
-    "    # Iterate Through Query Type\n",
-    "    for querytype in parameters[\"query_type\"]:\n",
-    "        # Iterate Through Query Size\n",
-    "        for size in parameters[\"query_size\"]:\n",
-    "            print('-----------------------------------------------------------------------------')\n",
-    "            print(f'--------Victim: {victim[\"model_name\"]} Dataset: {victim[\"data\"]}------------')\n",
-    "            print(f'---------------Query Type: {querytype} Query Size: {size}-------------------')\n",
-    "            \n",
-    "            # query train data\n",
-    "            querytrainloader = QueryVictim(victim, outputs, trainloader, size, query_type=querytype)\n",
-    "            \n",
-    "            # initialize attacker model\n",
-    "            attacker = ResNet34(3, ResBlock, outputs=10)\n",
-    "            attacker_loss = torch.nn.CrossEntropyLoss()\n",
-    "            \n",
-    "            # train attacker model\n",
-    "            attacker_result = Training(attacker, querytrainloader, querytestloader, (-1, 3, 32, 32), config[\"epochs\"], optimizer=torch.optim.Adam(attacker.parameters(), lr=config[\"learning_rate\"]), loss=attacker_loss)\n",
-    "            \n",
-    "            # save & visualize model inference\n",
-    "            percent = SaveVisualize(attacker, attacker_result, f'A_R34_{victim[\"model_name\"]}_{victim[\"data\"]}_{querytype}_{size}')\n",
-    "            results_dict={\"Victim\":victim[\"model_name\"],\n",
-    "                            \"Dataset\":victim[\"data\"],\n",
-    "                            \"QueryType\": querytype,\n",
-    "                            \"QuerySize\": size,\n",
-    "                            \"Attacker\": 'resnet34',\n",
-    "                            \"Train Loss\": percent[0],\n",
-    "                            \"Train Accuracy\": percent[1],\n",
-    "                            \"Test Loss\": percent[2],\n",
-    "                            \"Test Accuracy\": percent[3]}\n",
+    "    # Iterate through Attacker Model\n",
+    "    for attacker_type in parameters[\"attacker\"]:\n",
+    "        # Iterate Through Query Type\n",
+    "        for querytype in parameters[\"query_type\"]:\n",
+    "            # Iterate Through Query Size\n",
+    "            for size in parameters[\"query_size\"]:\n",
+    "                print('-----------------------------------------------------------------------------')\n",
+    "                print(f'-----------------------Dataset: {victim[\"data\"]}----------------------------')\n",
+    "                print(f'--------Victim: {victim[\"model_name\"]} Attacker: {attacker_type}------------')\n",
+    "                print(f'---------------Query Type: {querytype} Query Size: {size}-------------------')\n",
     "\n",
-    "            print(results_dict)\n",
-    "            Results.append(results_dict)\n",
-    "            print('-----------------------------------------------------------------------------')"
+    "                # query train data\n",
+    "                querytrainloader = QueryVictim(victim, outputs, trainloader, size, query_type=querytype)\n",
+    "\n",
+    "                # initialize attacker model\n",
+    "                attacker = getModel(attacker_type, outputs)\n",
+    "\n",
+    "                # train attacker model\n",
+    "                attacker_result = Training(attacker, querytrainloader, querytestloader, (-1, 3, 32, 32), config[\"epochs\"], \n",
+    "                                           optimizer=torch.optim.Adam(attacker.parameters(), lr=config[\"learning_rate\"]),\n",
+    "                                           loss=torch.nn.CrossEntropyLoss())\n",
+    "\n",
+    "                # save & visualize model inference\n",
+    "                title = f'A_{attacker_type}_{victim[\"model_name\"]}_{victim[\"data\"]}_{querytype}_{size}'\n",
+    "                percent = SaveVisualize(attacker, attacker_result, title)\n",
+    "                results_dict={\"Victim\":victim[\"model_name\"],\n",
+    "                                \"Dataset\":victim[\"data\"],\n",
+    "                                \"QueryType\": querytype,\n",
+    "                                \"QuerySize\": size,\n",
+    "                                \"Attacker\": attacker_type,\n",
+    "                                \"Train Loss\": percent[0],\n",
+    "                                \"Train Accuracy\": percent[1],\n",
+    "                                \"Test Loss\": percent[2],\n",
+    "                                \"Test Accuracy\": percent[3]}\n",
+    "\n",
+    "                print(results_dict)\n",
+    "                Results.append(results_dict)\n",
+    "                print('-----------------------------------------------------------------------------')"
    ]
   },
   {
@@ -184,6 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "torch.save(querytestloader, f'attacker/queried_data/{config[\"victim\"][\"data\"]}_queriedtestdataloader.pt')\n",
     "# load queried test data\n",
     "querytestloader = torch.load(f'attacker/queried_data/{config[\"victim\"][\"data\"]}_queriedtestdataloader.pt')\n",
     "print(f'Input dataset:{len(testloader.dataset)}, Queried dataset:{len(querytestloader.dataset)}')"
@@ -306,9 +314,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
