--- a/notebooks/Run4_results.ipynb
+++ b/notebooks/Run4_results.ipynb
@@ -1,98 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/Aishu/dl-model-extraction'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.chdir(\"../\")\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "idQmKzBgZqug"
-   },
-   "outputs": [],
-   "source": [
-    "from attacker.query import *\n",
-    "from attacker.utils import *\n",
-    "\n",
-    "set_seed(42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "n9SehmoStA7J"
-   },
-   "source": [
-    "# Query victim model & Train attacker model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Uses default configuration info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lMNfr2wZwGMF"
-   },
-   "outputs": [],
-   "source": [
-    "# get dataset in dataloader\n",
-    "trainloader, testloader, outputs = getDataset(config[\"victim\"][\"data\"])\n",
-    "\n",
-    "# query & save test data\n",
-    "querytestloader = QueryVictim(config[\"victim\"], outputs, testloader, len(testloader.dataset),train=False)\n",
-    "\n",
-    "# query train data\n",
-    "querytrainloader = QueryVictim(config[\"victim\"], outputs, trainloader, config[\"query_size\"], query_type=config[\"query_type\"])\n",
-    "\n",
-    "# initialize attacker model\n",
-    "attacker = getModel(config[\"attacker\"], outputs)\n",
-    "\n",
-    "# train attacker model\n",
-    "attacker_result = Training(attacker, querytrainloader, querytestloader, (-1, 3, 32, 32), config[\"epochs\"], \n",
-    "                           optimizer=torch.optim.Adam(attacker.parameters(), lr=config[\"learning_rate\"]),\n",
-    "                           loss=torch.nn.CrossEntropyLoss())\n",
-    "\n",
-    "# save & visualize model inference\n",
-    "title = f'Trial-A_{config[\"attacker\"]}_{config[\"victim\"][\"model_name\"]}_{config[\"victim\"][\"data\"]}{config[\"query_type\"]}_{config[\"query_size\"]}'\n",
-    "percent = SaveVisualize(attacker, attacker_result,title )\n",
-    "results_dict={\"Victim\":config[\"victim\"][\"model_name\"],\n",
-    "                \"Dataset\":config[\"victim\"][\"data\"],\n",
-    "                \"QueryType\": config[\"query_type\"],\n",
-    "                \"QuerySize\": config[\"query_size\"],\n",
-    "                \"Attacker\": 'resnet34',\n",
-    "                \"Train Loss\": percent[0],\n",
-    "                \"Train Accuracy\": percent[1],\n",
-    "                \"Test Loss\": percent[2],\n",
-    "                \"Test Accuracy\": percent[3]}\n",
-    "print(results_dict)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4645,9 +4553,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
