Query reverted to CPU usage

--- a/notebooks/Archived.ipynb
+++ b/notebooks/Archived.ipynb
@@ -87,6 +87,178 @@
     "victim.load_state_dict(torch.load('Victim_resnet34'))\n",
     "victim.eval()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Config Archived"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df0aef49",
+   "metadata": {},
+   "source": [
+    "import torch\n",
+    "\n",
+    "from victim.__init__ import *\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 80,\n",
+    "    \"query_size\":5000,\n",
+    "    \"query_type\": 'random',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": { \"data\": CIFAR_100,  \"model_name\": RESNET_56 },\n",
+    "    \"attacker\": RESNET50\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [20000],\n",
+    "        \"query_type\": ['random','coreset', 'coreset_cross'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
+    "        \"attacker\": [RESNET34]\n",
+    "}\n",
+    "\n",
+    "# Parameter Runs\n",
+    "\n",
+    "## Best Query Type, Best Query sizes on 2 datasets\n",
+    "\n",
+    "### Run1 - CIFAR10 - A_RESNET34 - V_RESNET50\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 100,\n",
+    "    \"query_size\":5000,\n",
+    "    \"query_type\": 'coreset',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": { \"data\": CIFAR_100,  \"model_name\": RESNET_56 }\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [10000, 20000, 30000, 40000, 50000],\n",
+    "        \"query_type\": ['random', 'coreset', 'coreset_cross'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10,  \"model_name\": RESNET50}]\n",
+    "}\n",
+    "\n",
+    "### Run2 - CIFAR10 - A_RESNET34 - V_RESNET50\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 80,\n",
+    "    \"query_size\":10000,\n",
+    "    \"query_type\": 'coreset',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": { \"data\": CIFAR_10,  \"model_name\": RESNET50 },\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [10000, 20000, 30000, 40000],\n",
+    "        \"query_type\": ['coreset', 'coreset_cross'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}]\n",
+    "}\n",
+    "\n",
+    "### Run3 - CIFAR10 - A_RESNET34 - V_RESNET50\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 80,\n",
+    "    \"query_size\":5000,\n",
+    "    \"query_type\": 'random',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": { \"data\": CIFAR_100,  \"model_name\": RESNET_56 },\n",
+    "    \"attacker\": RESNET50\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [20000],\n",
+    "        \"query_type\": ['random','coreset', 'coreset_cross'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
+    "        \"attacker\": [RESNET34]\n",
+    "}\n",
+    "\n",
+    "### Run4 - A_RESNET34 - Random Query\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 80,\n",
+    "    \"query_size\":10000,\n",
+    "    \"query_type\": 'random',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": {\"data\": CIFAR_10, \"model_name\": VGG19_BN},\n",
+    "    \"attacker\": RESNET34\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [10000, 20000, 30000, 40000, 10000],\n",
+    "        \"query_type\": ['random'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": VGG19_BN}, \n",
+    "                  { \"data\": CIFAR_100, \"model_name\": VGG19_BN}, \n",
+    "                  {\"data\": CIFAR_100, \"model_name\": RESNET_56 }],\n",
+    "        \"attacker\":[RESNET34]\n",
+    "}\n",
+    "\n",
+    "### Trial Run for coreset\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 10,\n",
+    "    \"query_size\":10000,\n",
+    "    \"query_type\": 'random',\n",
+    "    \"device\": torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "    \"victim\": {\"data\": CIFAR_10, \"model_name\": VGG19_BN},\n",
+    "    \"attacker\": RESNET34\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [50000],\n",
+    "        \"query_type\": ['coreset','random'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
+    "        \"attacker\":[RESNET34]\n",
+    "}\n",
+    "\n",
+    "### Run5 - A_RESNET34 - Coreset Query\n",
+    "\n",
+    "config = {\n",
+    "    \"batch_size\": 500,\n",
+    "    \"learning_rate\": 0.008,\n",
+    "    \"epochs\": 80,\n",
+    "    \"query_size\":10000,\n",
+    "    \"query_type\": 'random',\n",
+    "    \"victim\": { \"data\": CIFAR_10,  \"model_name\": RESNET50 },\n",
+    "    \"attacker\": RESNET34,\n",
+    "    \"klogits\": 2\n",
+    "}\n",
+    "\n",
+    "parameters = {\n",
+    "        \"query_size\": [10000, 20000, 30000, 40000, 50000],\n",
+    "        \"query_type\": ['coreset','coreset_cross'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50},\n",
+    "                  { \"data\": CIFAR_10, \"model_name\": VGG19_BN}, \n",
+    "                  { \"data\": CIFAR_100, \"model_name\": VGG19_BN}, \n",
+    "                  {\"data\": CIFAR_100, \"model_name\": RESNET_56 }],\n",
+    "        \"attacker\":[RESNET34],\n",
+    "        \"klogits\": [0, 3, 10]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
