Transforms modified for victim and attacker

--- a/notebooks/Archived.ipynb
+++ b/notebooks/Archived.ipynb
@@ -14,6 +14,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Train using entire dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainloader, testloader, outputs = get_dataloader(config[\"victim\"][\"data\"])\n",
+    "model = get_model(config[\"attacker\"], outputs)\n",
+    "result = training(model, trainloader, testloader, config[\"epochs\"],\n",
+    "                           optimizer=torch.optim.Adam(model.parameters(), lr=config[\"learning_rate\"]),\n",
+    "                           loss=torch.nn.CrossEntropyLoss())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Testing Time outputs"
    ]
   },
