tested scheduler +trial code for k-logits

--- a/notebooks/Archived.ipynb
+++ b/notebooks/Archived.ipynb
@@ -11,6 +11,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "querytestloader =  query_victim(victim, outputs, testloader, len(testloader.dataset))\n",
+    "sampledtrainloader = query_type(victim, outputs, trainloader, query_size,\n",
+    "                                'queried/query_traindata_cifar10_resenet50', query_type)\n",
+    "victim_model = fetch_victim_model(args=victim)\n",
+    "\n",
+    "def attacker_training_w_logits(victim_model, attacker_model, sampledtrainloader, querytestloader, k):\n",
+    "    # initialize score lists\n",
+    "    train_acc = []\n",
+    "    train_loss = []\n",
+    "    test_acc = []\n",
+    "    test_loss = []\n",
+    "    train_loss_func = None\n",
+    "    \n",
+    "    # select optimiser and scheduler\n",
+    "    optimizer = torch.optim.Adam(attacker_model.parameters(), lr=config[\"learning_rate\"])\n",
+    "    scheduler = torch.optim.lr_scheduler.CyclicLR(optimizer, base_lr=config[\"base_lr\"], max_lr=config[\"max_lr\"],\n",
+    "                                                  step_size_up=config[\"lr_steps\"], mode='triangular2', cycle_momentum=False)\n",
+    "\n",
+    "    # select loss\n",
+    "    loss = torch.nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    # train for epochs\n",
+    "    epochs = int(2*config[\"lr_cycles\"]*config[\"lr_steps\"]/(len(train_loader.dataset)/config[\"batch_size\"]))\n",
+    "    print(f'Total epochs: {epochs}')\n",
+    "    for epoch in range(epochs):\n",
+    "        print(\"\\repoch\", epoch + 1)\n",
+    "        \n",
+    "        # train on Train Data\n",
+    "        num_train = 0\n",
+    "        num_correct_train = 0\n",
+    "        attacker_model.train() \n",
+    "        for (xList, _) in sampledtrainloader:\n",
+    "            xList = torch.autograd.Variable(xList)\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            if torch.cuda.is_available():\n",
+    "                xList = xList.type(torch.cuda.FloatTensor)\n",
+    "                device = torch.device(DEVICE)\n",
+    "                attacker_model.to(device)\n",
+    "            \n",
+    "            # query victim for logits\n",
+    "            yList = victim_model(xList)\n",
+    "            val, ind = torch.topk(yList, k, dim=1)\n",
+    "            ones = (torch.ones(yList.shape)*float('-inf'))\n",
+    "            if torch.cuda.is_available():\n",
+    "                ones = ones.type(torch.cuda.FloatTensor)\n",
+    "            yList = ones.scatter_(1, ind, val)\n",
+    "            yList = torch.nn.functional.softmax(yList, dim=1)\n",
+    "            \n",
+    "            # get outputs and train model\n",
+    "            with torch.set_grad_enabled(True):\n",
+    "                outputs = attacker_model(xList)\n",
+    "                train_loss_func = loss(outputs, yList)\n",
+    "                train_loss_func.backward()\n",
+    "                optimizer.step()\n",
+    "                scheduler.step()\n",
+    "\n",
+    "            # get correct predictions count\n",
+    "            num_train += len(yList)\n",
+    "            predicts = torch.max(outputs.data, 1)[1]\n",
+    "            num_correct_train += (predicts == yList).float().sum()\n",
+    "\n",
+    "            print('\\r %d ...' % num_train, end='')\n",
+    "\n",
+    "        train_acc.append(num_correct_train / num_train)\n",
+    "        train_loss.append(train_loss_func.data)\n",
+    "        print(\"\\r    - train_acc %.5f train_loss %.5f\" % (train_acc[-1], train_loss[-1]))\n",
+    "\n",
+    "        # evaluate on Test Data\n",
+    "        num_test = 0\n",
+    "        num_correct_test = 0\n",
+    "        attacker_model.eval()\n",
+    "        for (xList, yList) in queriedtestloader:\n",
+    "            if torch.cuda.is_available():\n",
+    "                xList = xList.type(torch.cuda.FloatTensor)\n",
+    "                yList = yList.type(torch.cuda.LongTensor)\n",
+    "                device = torch.device(DEVICE)\n",
+    "                attacker_model.to(device)\n",
+    "            \n",
+    "            #  get outputs\n",
+    "            with torch.set_grad_enabled(False):\n",
+    "                outputs = attacker_model(xList)\n",
+    "                test_loss_func = loss(outputs, yList)\n",
+    "            \n",
+    "            # get correct predictions count\n",
+    "            num_test += len(yList)\n",
+    "            predicts = torch.max(outputs.data, 1)[1]\n",
+    "            num_correct_test += (predicts == yList).float().sum()\n",
+    "\n",
+    "        test_acc.append(num_correct_test / num_test)\n",
+    "        test_loss.append(test_loss_func.data)\n",
+    "        print(\"\\r    - test_acc  %.5f test_loss  %.5f\" %(test_acc[-1], test_loss[-1]))\n",
+    "    return train_loss, train_acc, test_loss, test_acc"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
