--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/Aishu/dl-model-extraction'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir(\"../\")\n",
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "idQmKzBgZqug"
    },
@@ -37,7 +26,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "investigate(config[\"test_trial\"]) #to run default config"
+    "from adverserial.adversial import *"
    ]
   },
   {
@@ -275,10 +264,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Case 6 : Adversarial Transfers"
+    "Case 6 : Adversarial Transfers\n",
+    "    Dataset - Cifar10\n",
+    "    klogits - None\n",
+    "    QueryType - coreset\n",
+    "    Query Size - 20k\n",
+    "    Attacker - Resnet34\n",
+    "    Victim - Resnet50"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "case4_adverserial = {\n",
+    "        \"query_size\": [20000],\n",
+    "        \"query_type\": ['coreset'],\n",
+    "        \"victim\":[{ \"data\": CIFAR_10, \"model_name\": RESNET50}],\n",
+    "        \"attacker\":[RESNET34],\n",
+    "        \"k_logits\": [None]\n",
+    "}"
    ]
   },
   {
@@ -289,12 +297,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## case - 1 to 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "investigate(parameters, verbose=True, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "investigate(config[\"base\"]) #to run default config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## case - 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adverserial_experiment(case4_adverserial, epsilon=0.01, seed=42)"
    ]
   }
  ],
