adverserial some errors fixed

--- a/notebooks/Attacker.ipynb
+++ b/notebooks/Attacker.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/Aishu/dl-model-extraction'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir(\"../\")\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "idQmKzBgZqug"
    },
@@ -222,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,19 +315,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "investigate(parameters, verbose=True, seed=42)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARAMETERS for investigation:\n",
+      "{'attacker': ['resnet34'],\n",
+      " 'k_logits': [None],\n",
+      " 'query_size': [20000],\n",
+      " 'query_type': ['coreset'],\n",
+      " 'victim': [{'data': 'cifar_10', 'model_name': 'resnet50'}]}\n",
+      "---------------------------------------------------------------------------\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Loading queried cifar_10 dataset with resnet50 victim\n",
+      "\t- input:10000 queried:10000\n",
+      "Sampling using None with query size 10000\n",
+      "\t- input:10000 sampled:10000 data_augmentation:False\n",
+      "Loading queried cifar_10 dataset with resnet50 victim\n",
+      "\t- input:50000 queried:50000\n",
+      "Sampling using coreset with query size 20000\n",
+      "\t- input:50000 sampled:20000 data_augmentation:True\n",
+      "\n",
+      "-----------------------------------------------------------------------------\n",
+      "\tDataset: cifar_10\n",
+      "\tVictim: resnet50\tAttacker: resnet34\n",
+      "\tQuery Type: coreset\tQuery Size: 20000\tLogits: None\n",
+      "-----------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|██████▎                                   | 15/100 [04:08<23:30, 16.60s/it]"
+     ]
+    }
+   ],
    "source": [
-    "investigate(config[\"base\"]) #to run default config"
+    "investigate(config[\"base\"], seed=42) #to run default config"
    ]
   },
   {
