--- a/notebooks/case6_adverserial.ipynb
+++ b/notebooks/case6_adverserial.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,157 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█████▎                                | 1390/10000 [03:40<32:47,  4.38it/s]"
+      "100%|█████████████████████████████████████| 10000/10000 [29:10<00:00,  5.71it/s]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total images: 10000\n",
+      "images correctly classified by attacker: 2828\n",
+      "images adverserial for attacker: 1982\n",
+      "images also adverserial for victim: 1067\n",
+      "images with same adverserial label: 122\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[37,\n",
+       " 161,\n",
+       " 191,\n",
+       " 301,\n",
+       " 510,\n",
+       " 561,\n",
+       " 638,\n",
+       " 661,\n",
+       " 847,\n",
+       " 867,\n",
+       " 943,\n",
+       " 1117,\n",
+       " 1137,\n",
+       " 1185,\n",
+       " 1398,\n",
+       " 1441,\n",
+       " 1484,\n",
+       " 1556,\n",
+       " 1718,\n",
+       " 1738,\n",
+       " 1855,\n",
+       " 2001,\n",
+       " 2128,\n",
+       " 2195,\n",
+       " 2213,\n",
+       " 2228,\n",
+       " 2375,\n",
+       " 2409,\n",
+       " 2460,\n",
+       " 2570,\n",
+       " 2608,\n",
+       " 3029,\n",
+       " 3118,\n",
+       " 3156,\n",
+       " 3165,\n",
+       " 3268,\n",
+       " 3298,\n",
+       " 3419,\n",
+       " 3511,\n",
+       " 3539,\n",
+       " 3645,\n",
+       " 3718,\n",
+       " 3734,\n",
+       " 3740,\n",
+       " 3778,\n",
+       " 4062,\n",
+       " 4313,\n",
+       " 4330,\n",
+       " 4431,\n",
+       " 4546,\n",
+       " 4551,\n",
+       " 4562,\n",
+       " 4571,\n",
+       " 4752,\n",
+       " 4792,\n",
+       " 5065,\n",
+       " 5093,\n",
+       " 5181,\n",
+       " 5220,\n",
+       " 5374,\n",
+       " 5524,\n",
+       " 5932,\n",
+       " 6394,\n",
+       " 6436,\n",
+       " 6615,\n",
+       " 6618,\n",
+       " 6633,\n",
+       " 6750,\n",
+       " 6752,\n",
+       " 6803,\n",
+       " 6962,\n",
+       " 6982,\n",
+       " 6987,\n",
+       " 7123,\n",
+       " 7143,\n",
+       " 7146,\n",
+       " 7172,\n",
+       " 7175,\n",
+       " 7274,\n",
+       " 7280,\n",
+       " 7282,\n",
+       " 7298,\n",
+       " 7394,\n",
+       " 7460,\n",
+       " 7607,\n",
+       " 7658,\n",
+       " 7754,\n",
+       " 7900,\n",
+       " 8080,\n",
+       " 8084,\n",
+       " 8096,\n",
+       " 8105,\n",
+       " 8288,\n",
+       " 8452,\n",
+       " 8474,\n",
+       " 8478,\n",
+       " 8496,\n",
+       " 8547,\n",
+       " 8558,\n",
+       " 8565,\n",
+       " 8694,\n",
+       " 8731,\n",
+       " 8761,\n",
+       " 8764,\n",
+       " 8779,\n",
+       " 8914,\n",
+       " 9122,\n",
+       " 9144,\n",
+       " 9252,\n",
+       " 9254,\n",
+       " 9336,\n",
+       " 9351,\n",
+       " 9410,\n",
+       " 9634,\n",
+       " 9794,\n",
+       " 9799,\n",
+       " 9818,\n",
+       " 9841,\n",
+       " 9855,\n",
+       " 9895,\n",
+       " 9953,\n",
+       " 9974]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
